--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0.1"
+requests = "^2.31.0"
+pandas = "^2.1.0"
+datetime = "^5.2"
 
 
 [build-system]
